force-app/main/default/objects/Project_Attributes__c/Project_Attributes__c.object-meta.xml
<CustomObject>
    <description>This object is used store all Amenities, Preference&apos;s, Vouchers information of Project.</description>
    <label>Project Attributes</label>
    <nameField>
        <displayFormat>Attribute - {000000}</displayFormat>
        <label>Project Attributes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>