force-app/main/default/objects/Project_Attributes__c/fields/AMI_Category__c.field-meta.xml
<CustomField>
    <fullName>AMI_Category__c</fullName>
    <label>AMI Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AMI_Category</valueSetName>
    </valueSet>
</CustomField>