force-app/main/default/objects/Project_Attributes__c/fields/AMINumber__c.field-meta.xml
<CustomField>
    <fullName>AMINumber__c</fullName>
    <formula>VALUE(
    SUBSTITUTE(TEXT(AMI_Category__c), &quot;%&quot;, &quot;&quot;)
) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMINumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>