force-app/main/default/objects/Project_Attributes__c/fields/BuildingAttributeCount__c.field-meta.xml
<CustomField>
    <fullName>BuildingAttributeCount__c</fullName>
    <inlineHelpText>This represents the number of units who have been assigned this particular attribute</inlineHelpText>
    <label>Units with Attribute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>