force-app/main/default/objects/Project_Attributes__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>Count of Units or Limits on each enumeration value</description>
    <inlineHelpText>This represents the maximum number of units eligible to be assigned this particular attribute</inlineHelpText>
    <label>Unit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>