force-app/main/default/objects/Project_Attributes__c/fields/ExternalProjAttrId__c.field-meta.xml
<CustomField>
    <fullName>ExternalProjAttrId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ExternalProjAttrId</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>