force-app/main/default/objects/Project_Attributes__c/fields/Is_Custom_Preference__c.field-meta.xml
<CustomField>
    <fullName>Is_Custom_Preference__c</fullName>
    <label>Is Custom Preference?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>