force-app/main/default/objects/Project_Attributes__c/fields/IsAccessibility__c.field-meta.xml
<CustomField>
    <fullName>IsAccessibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAccessibility</label>
    <type>Checkbox</type>
</CustomField>