force-app/main/default/objects/Project_Attributes__c/fields/IsPreference__c.field-meta.xml
<CustomField>
    <fullName>IsPreference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Preference</label>
    <type>Checkbox</type>
</CustomField>