force-app/main/default/objects/Project_Attributes__c/fields/IsSetAside__c.field-meta.xml
<CustomField>
    <fullName>IsSetAside__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Set-Aside</label>
    <type>Checkbox</type>
</CustomField>