force-app/main/default/objects/Project_Attributes__c/fields/Max_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Max_Household_Income__c</fullName>
    <label>Max Household Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>