force-app/main/default/objects/Project_Attributes__c/fields/Maximum_Occupants__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Occupants__c</fullName>
    <label>Maximum Occupants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>