force-app/main/default/objects/Project_Attributes__c/fields/Preference_Types__c.field-meta.xml
<CustomField>
    <fullName>Preference_Types__c</fullName>
    <label>Preference Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Artist / Literary</fullName>
            </value>
            <value>
                <fullName>Displ. by Subs Hsg Constr</fullName>
            </value>
            <value>
                <fullName>Displaced by Disaster</fullName>
            </value>
            <value>
                <fullName>ESSHI-Chronic homeless</fullName>
            </value>
            <value>
                <fullName>ESSHI-Frail/disabled srs</fullName>
            </value>
            <value>
                <fullName>ESSHI-Hmless/foster youth</fullName>
            </value>
            <value>
                <fullName>ESSHI-I/DD</fullName>
            </value>
            <value>
                <fullName>ESSHI-Justice inv. yth.</fullName>
            </value>
            <value>
                <fullName>ESSHI-Military w disabil.</fullName>
            </value>
            <value>
                <fullName>ESSHI-Other</fullName>
            </value>
            <value>
                <fullName>ESSHI-Physically Disabled</fullName>
            </value>
            <value>
                <fullName>ESSHI-Ppl w AIDS HIV HepC</fullName>
            </value>
            <value>
                <fullName>ESSHI-SMI</fullName>
            </value>
            <value>
                <fullName>ESSHI-Subst. Use Dis.</fullName>
            </value>
            <value>
                <fullName>ESSHI-Survivors DV or HT</fullName>
            </value>
            <value>
                <fullName>Frail Elderly</fullName>
            </value>
            <value>
                <fullName>Government Employee</fullName>
            </value>
            <value>
                <fullName>Homeless/At-Risk</fullName>
            </value>
            <value>
                <fullName>HUD CoC Supp Hsg</fullName>
            </value>
            <value>
                <fullName>Live, Work, Hired in Area</fullName>
            </value>
            <value>
                <fullName>NY 15/15</fullName>
            </value>
            <value>
                <fullName>NYC Community Board</fullName>
            </value>
            <value>
                <fullName>OMH Supp Hsg for SMI</fullName>
            </value>
            <value>
                <fullName>OPWDD Integ Supp Hsg I/DD</fullName>
            </value>
            <value>
                <fullName>Senior 55+</fullName>
            </value>
            <value>
                <fullName>Senior 62+</fullName>
            </value>
            <value>
                <fullName>Seniors (Other)</fullName>
            </value>
            <value>
                <fullName>Supp Hsg Other</fullName>
            </value>
            <value>
                <fullName>Veterans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>