force-app/main/default/objects/Project_Attributes__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>This is the value of the attribute that is defined by the record type.  This object is intended to be a M-D enumeration.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is for adding a custom preference or set-aside for a given project. Adding a custom preference will allow this value to be used as a prioritization condition for any subsequent waitlists or lotteries.</inlineHelpText>
    <label>Custom Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>