force-app/main/default/objects/Project_Attributes__c/recordTypes/AMI_Limits.recordType-meta.xml
<RecordType>
    <fullName>AMI_Limits</fullName>
    <active>true</active>
    <label>AMI Category</label>
</RecordType>