force-app/main/default/objects/Project_Attributes__c/recordTypes/Preferences.recordType-meta.xml
<RecordType>
    <fullName>Preferences</fullName>
    <active>true</active>
    <label>Preferences</label>
</RecordType>