force-app/main/default/objects/Project_Attributes__c/recordTypes/Vouchers.recordType-meta.xml
<RecordType>
    <fullName>Vouchers</fullName>
    <active>true</active>
    <label>Vouchers</label>
</RecordType>